--- a/mathis/tp.ipynb
+++ b/mathis/tp.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "f3cc8eff",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import httplib2 "
+    "import json\n",
+    "import httplib2\n",
+    "import urllib\n",
+    "from urllib.parse import urlencode, quote_plus"
    ]
   },
   {
@@ -38,11 +41,90 @@
     "```python\n",
     "categoryToCrawl = \"Category:Biology\"\n",
     "pagesToDw = getPages(categoryToCrawl)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "408bff95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categoryToCrawl = \"Category:Biology\"\n",
+    "crawlingDepth = 2\n",
+    "\n",
+    "def getPages(category):\n",
+    "\th = httplib2.Http()\n",
+    "\tparams = dict()\n",
+    "\tparams[\"cmlimit\"] = \"500\"\n",
+    "\tparams[\"list\"] = \"categorymembers\"\n",
+    "\tparams[\"action\"] = \"query\"\n",
+    "\tparams[\"format\"] = \"json\"\n",
+    "\tparams[\"cmtitle\"] = category\n",
+    "\tencodedParams = urlencode(params)\n",
+    "\t(resp_headers, content) = h.request(\"http://en.wikipedia.org/w/api.php?\" + encodedParams, \"GET\")\n",
+    "\tjsonContent = content.decode('utf-8')\n",
+    "\t\n",
+    "\ttry:\n",
+    "\t\tj = json.loads(jsonContent)[\"query\"][\"categorymembers\"]\n",
+    "\texcept json.JSONDecodeError: # Added exception handling\n",
+    "\t\treturn []\n",
+    "\n",
+    "\treturn j\n",
+    "\n",
+    "pagesToDw = getPages(categoryToCrawl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef8aab28",
+   "metadata": {},
+   "source": [
+    "**R2.2:** The output of `crawl.py` is the depth of the current crawling as well as the number of pages to download as shown in the following code snippet:\n",
+    "```python\n",
+    "print(\"Crawling at depth\",depth,\". Pages to dw:\",len(pagesToDw))\n",
     "```\n",
-    "\n",
-    "**R2.2:**\n",
-    "\n",
-    "**R2.3:**"
+    "It also creates a file `wiki.lst` for which we discuss the content in the next question"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0684fab9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Crawling at depth 0 . Pages to dw: 63\n",
+      "Crawling at depth 1 . Pages to dw: 1474\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"wiki.lst\",'w',encoding='utf-8') as outFile:\n",
+    "\tfor depth in range(crawlingDepth):\n",
+    "\t\tprint(\"Crawling at depth\",depth,\". Pages to dw:\",len(pagesToDw))\n",
+    "\t\tdeeperLevelPages = list()\n",
+    "\t\tfor page in pagesToDw:\n",
+    "\t\t\tpageTitle = page[\"title\"]\n",
+    "\t\t\tif pageTitle.startswith(\"Category:\"):\n",
+    "\t\t\t\tdeeperLevelPages += getPages(pageTitle)\n",
+    "\t\t\toutFile.write(pageTitle+\"\\n\")\n",
+    "\t\tpagesToDw = deeperLevelPages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b33ad4bf",
+   "metadata": {},
+   "source": [
+    "**R2.3:** he file `wiki.lst` should contain the list of titles of the pages visited by the crawler, as illustrated in the following code snippet:\n",
+    "```python\n",
+    "outFile.write(pageTitle+\"\\n\")\n",
+    "```"
    ]
   },
   {
