--- a/mathis/tp.ipynb
+++ b/mathis/tp.ipynb
@@ -147,6 +147,89 @@
   },
   {
    "cell_type": "markdown",
+   "id": "69ef3adf",
+   "metadata": {},
+   "source": [
+    "**R3.1:** We split the pages into batches of 3000 pages, as we are running linux\n",
+    "```bash\n",
+    "sort -u $1|grep \"[A-Za-z0-9]\" > $1.uniq\n",
+    "split $1.uniq -l 3000 --additional-suffix=.chunks\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f46d852f",
+   "metadata": {},
+   "source": [
+    "**R3.2:** The API from Wikipedia used in this script is \"https://en.wikipedia.org/wiki/Special:Export\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1501baf4",
+   "metadata": {},
+   "source": [
+    "**R3.3:** The crawler takes the list of page titles stored in `wiki.lst`, splits it into batches of 3000 pages, and generates URLs from each batch. These batches are then submitted to Wikipedia’s MediaWiki interface to download the corresponding pages in XML format."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d143dffe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100  7589k   0  7550k 100 40401  1131k  6055   0:00:06  0:00:06 --:--:--  1438k\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sh\n",
+    "# --- 0. Arguments to run in jupyter cell ---\n",
+    "INPUT_FILE=\"wiki.lst\" \n",
+    "\n",
+    "# --- 1. Clean page titles : sort and remove duplicates ---\n",
+    "sort -u $INPUT_FILE|grep \"[A-Za-z0-9]\" > $INPUT_FILE.uniq\n",
+    "\n",
+    "# --- 2. Split into batches ---\n",
+    "split $INPUT_FILE.uniq -l 3000 --additional-suffix=.chunks\n",
+    "\n",
+    "# --- 3. Create Output Directory ---\n",
+    "mkdir -p dws\n",
+    "\n",
+    "# --- 4. Encode in the right format for url ---\n",
+    "alias urlencode='python3 -c \"import sys, urllib.parse as ul; \\\n",
+    " f=open(sys.argv[1],encoding=\\\"utf-8\\\"); \\\n",
+    " print(\\\"\\\".join([ul.quote_plus(l) for l in f ]))\"'\n",
+    "\n",
+    "# --- 5. Actually download ---\n",
+    "for f in `ls *.chunks`; do\n",
+    "\tcat $f| awk  '{if(page!=\"\") {page = page\"\\r\\n\"} page = page$0}END{print(page)}' > $f.post\n",
+    "\tpages=$(urlencode $f.post)\n",
+    "\tcurl -X POST -b \"WMF-Last-Access-Global=29-Oct-2018&WMF-Last-Access=29-Oct-2018&GeoIP=FR%3AARA%3AGrenoble%3A45.17%3A5.72%3Av4&VEE=wikitext\" -H \"Host: en.wikipedia.org\" -H \"User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:62.0) Gecko/20100101 Firefox/62.0\" -H \"Accept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8\" -H \"Accept-Language: en-US,en;q=0.5\" -H \"Accept-Encoding: gzip, deflate, br\" -H \"Referer: https://en.wikipedia.org/wiki/Special:Export\" -H \"Content-Type: application/x-www-form-urlencoded\"  -H \"Cookie: WMF-Last-Access-Global=29-Oct-2018; WMF-Last-Access=29-Oct-2018; GeoIP=FR:ARA:Grenoble:45.17:5.72:v4; VEE=wikitext\" -H \"Connection: keep-alive\" -H \"Upgrade-Insecure-Requests: 1\" -d \"catname=&curonly=1&wpDownload=1&wpEditToken=%2B%5C&title=Special%3AExport&pages=$pages\" https://en.wikipedia.org/wiki/Special:Export > dws/$f.gz;\n",
+    "\trm -f $f.post;\n",
+    "\tgzip -d dws/$f.gz;\n",
+    "done;\n",
+    "\n",
+    "rm -f *.chunks $INPUT_FILE.uniq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eeeebfbb",
+   "metadata": {},
+   "source": [
+    "**R3.4:** The documentation tells us that the format used in XML as \"You can export the text and editing history of a particular page or set of pages wrapped in XML.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9ca6ca4d",
    "metadata": {},
    "source": [
